--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -2,8 +2,6 @@ name: Smart News Bot (Iraq Time)
 
 on:
   schedule:
-    # 09:00 UTC = 12:00 ظهرًا بتوقيت بغداد
-    # 13:00 UTC = 04:00 عصرًا بتوقيت بغداد
     - cron: '0 9 * * *'
     - cron: '0 13 * * *'
   workflow_dispatch:
@@ -26,13 +24,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Verify installed packages
-        run: |
-          pip list
-
       - name: Run bot
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          BLOGGER_TOKEN: ${{ secrets.BLOGGER_TOKEN }}
-        run: |
-          python main.py
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
+          BLOG_URL: ${{ secrets.BLOG_URL }}
+        run: python main.py
