--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-requests
-feedparser
-markdown
-backoff
-google-api-python-client
-google-auth
+google-api-python-client==2.149.0
+google-auth==2.35.0
+requests==2.32.3
+markdown==3.6
+bleach==6.1.0
+APScheduler==3.10.4
+backoff==2.2.1
+python-dateutil==2.9.0.post0
+feedparser==6.0.11
+Flask==3.0.3
