--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -1,34 +1,109 @@
-name: Smart News Bot (Iraq Time)
+name: Auto Publish (Live + Schedule)
 
 on:
   schedule:
-    - cron: '0 9 * * *'
-    - cron: '0 13 * * *'
+    # 06:00 و 14:00 UTC = 09:00 و 17:00 بتوقيت بغداد
+    - cron: "0 6 * * *"
+    - cron: "0 14 * * *"
   workflow_dispatch:
+    inputs:
+      slot:
+        description: "اختر الفتحة: 0 (صباح) ، 1 (مساء) ، 2 (الاثنتان معًا)"
+        required: false
+        default: "2"
+
+concurrency:
+  group: auto-publish
+  cancel-in-progress: false
 
 jobs:
-  run-bot:
+  publish:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+
+    env:
+      # نُجبر النشر المباشر
+      PUBLISH_MODE: live
+      USE_EXTERNAL_CRON: "0"
+      RUN_ONCE: "0"
+
+      # منع تكرار المواضيع
+      TOPIC_WINDOW_DAYS: ${{ secrets.TOPIC_WINDOW_DAYS || '14' }}
+
+      # مفاتيح الصور (اختياري)
+      PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
+      PIXABAY_API_KEY: ${{ secrets.PIXABAY_API_KEY }}
+      UNSPLASH_ACCESS_KEY: ${{ secrets.UNSPLASH_ACCESS_KEY }}
+      FEATURED_IMAGE_URL: ${{ secrets.FEATURED_IMAGE_URL }}
+
+      # ضبطات الأمان
+      SAFE_CALLS_PER_MIN: "3"
+      AI_MAX_RETRIES: "3"
+      AI_BACKOFF_BASE: "4"
+      TITLE_WINDOW: "40"
+
+      # أسرار أساسية
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      BLOG_URL: ${{ secrets.BLOG_URL }}
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install google-api-python-client google-auth \
+                        requests feedparser backoff flask apscheduler \
+                        markdown bleach
+          fi
 
-      - name: Run bot
+      # ======================
+      # تشغيل مجدول (slot واحد)
+      # ======================
+      - name: Publish scheduled slot
+        if: ${{ github.event_name == 'schedule' }}
+        run: |
+          H=$(date -u +%H)
+          if [ "$H" = "06" ]; then SLOT=0; else SLOT=1; fi
+          echo "Publishing SLOT=$SLOT"
+          python - <<PY
+          import os
+          from main import make_article_once
+          make_article_once(int(os.environ["SLOT"]))
+          PY
         env:
-          HF_API_KEY: ${{ secrets.HF_API_KEY }}
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-          BLOG_URL: ${{ secrets.BLOG_URL }}
-        run: python main.py
+          SLOT: ${{ env.SLOT || '0' }}
+
+      # ======================
+      # تشغيل يدوي (slot واحد)
+      # ======================
+      - name: Publish single slot (manual 0 or 1)
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.slot != '2' }}
+        run: |
+          python - <<PY
+          from main import make_article_once
+          slot = int("${{ inputs.slot }}")
+          if slot not in (0,1):
+              raise SystemExit("slot must be 0 or 1")
+          make_article_once(slot)
+          PY
+
+      # ======================
+      # تشغيل يدوي (الاثنان)
+      # ======================
+      - name: Publish both slots (manual 2)
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.slot == '2' }}
+        run: |
+          RUN_ONCE=1 USE_EXTERNAL_CRON=0 python main.py
