--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -2,15 +2,20 @@ name: Auto Publish (Baghdad Time)
 
 on:
   schedule:
-    # 06:00 و 14:00 UTC = 09:00 و 17:00 بغداد
-    - cron: "0 6 * * *"
-    - cron: "0 14 * * *"
+    # 09:00 UTC = 12:00 بغداد
+    # 18:00 UTC = 21:00 بغداد
+    - cron: "0 7 * * *"
+    - cron: "0 15 * * *"
   workflow_dispatch:
     inputs:
       slot:
-        description: "0 صباح / 1 مساء / 2 كلاهما"
+        description: "0 = صباح | 1 = مساء | 2 = الاثنان"
         required: false
         default: "2"
+
+concurrency:
+  group: auto-publish
+  cancel-in-progress: false
 
 jobs:
   publish:
@@ -18,7 +23,11 @@ jobs:
     timeout-minutes: 30
 
     env:
+      # وضع النشر
       PUBLISH_MODE: live
+      USE_EXTERNAL_CRON: "0"
+
+      # أسرار Gemini + Blogger
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       BLOG_URL: ${{ secrets.BLOG_URL }}
       CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -26,7 +35,7 @@ jobs:
       REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -34,21 +43,31 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install dependencies (MATCH main.py)
         run: |
           python -m pip install --upgrade pip
-          pip install google-api-python-client google-auth requests backoff markdown bleach feedparser
+          pip install \
+            google-generativeai \
+            google-api-python-client \
+            google-auth \
+            markdown \
+            bleach \
+            backoff \
+            requests
 
-      # ===== تشغيل مجدول =====
+      # ===== التشغيل المجدول =====
       - name: Publish scheduled slot
         if: ${{ github.event_name == 'schedule' }}
         run: |
           H=$(date -u +%H)
-          if [ "$H" = "06" ]; then SLOT=0; elif [ "$H" = "14" ]; then SLOT=1; else exit 0; fi
-          echo "Publishing SLOT=$SLOT"
-          SLOT=$SLOT python main.py
+          if [ "$H" = "07" ]; then
+            export SLOT=0
+          else
+            export SLOT=1
+          fi
+          python main.py
 
-      # ===== تشغيل يدوي =====
+      # ===== التشغيل اليدوي =====
       - name: Publish manual
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
