--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -1,15 +1,13 @@
-name: Auto Publish (Baghdad Time)
+name: Auto Publish (Baghdad 12:00 & 20:00)
 
 on:
   schedule:
-    # 09:00 UTC = 12:00 بغداد
-    # 18:00 UTC = 21:00 بغداد
-    - cron: "0 7 * * *"
-    - cron: "0 15 * * *"
+    - cron: "0 9 * * *"   # 12:00 بغداد
+    - cron: "0 17 * * *"  # 20:00 بغداد
   workflow_dispatch:
     inputs:
       slot:
-        description: "0 = صباح | 1 = مساء | 2 = الاثنان"
+        description: "0 = نشر واحد | 1 = نشر واحد | 2 = نشر الاثنين"
         required: false
         default: "2"
 
@@ -23,11 +21,7 @@ jobs:
     timeout-minutes: 30
 
     env:
-      # وضع النشر
       PUBLISH_MODE: live
-      USE_EXTERNAL_CRON: "0"
-
-      # أسرار Gemini + Blogger
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       BLOG_URL: ${{ secrets.BLOG_URL }}
       CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -35,7 +29,7 @@ jobs:
       REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -43,7 +37,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies (MATCH main.py)
+      - name: Install dependencies (exact match)
         run: |
           python -m pip install --upgrade pip
           pip install \
@@ -51,23 +45,21 @@ jobs:
             google-api-python-client \
             google-auth \
             markdown \
-            bleach \
-            backoff \
-            requests
+            bleach
 
-      # ===== التشغيل المجدول =====
+      # التشغيل المجدول
       - name: Publish scheduled slot
         if: ${{ github.event_name == 'schedule' }}
         run: |
           H=$(date -u +%H)
-          if [ "$H" = "07" ]; then
+          if [ "$H" = "09" ]; then
             export SLOT=0
           else
             export SLOT=1
           fi
           python main.py
 
-      # ===== التشغيل اليدوي =====
+      # التشغيل اليدوي
       - name: Publish manual
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
